fix in test/fixtures/users.yml

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,20 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+-one:
+-  first_name: MyString
+-  last_name: MyString
+-  email: MyString
+-  encrypted_password: MyString
+-  address: MyText
+-  phone: MyString
+-  group: 
+-
+-two:
+-  first_name: MyString
+-  last_name: MyString
+-  email: MyString
+-  encrypted_password: MyString
+-  address: MyText
+-  phone: MyString
+-  group:
